[project]
name = "zylora"
version = "0.1.0"
description = "Serverless GPU functions — deploy ML models with a decorator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Zylora", email = "hello@zylora.dev" }]
keywords = ["gpu", "serverless", "ml", "inference", "deploy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "cloudpickle>=3.0",
]

[project.urls]
Homepage = "https://zylora.dev"
Documentation = "https://docs.zylora.dev"
Repository = "https://github.com/zylora-dev/zylora-python"
Issues = "https://github.com/zylora-dev/zylora-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zylora"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "RUF002", # ambiguous unicode in docstrings (en dash)
    "RUF006", # dangling task — intentional in close()
]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
